draft version of release notes and release report

--- a/Documentation/ReleaseNotes/ReleaseReport.tex
+++ b/Documentation/ReleaseNotes/ReleaseReport.tex
@@ -1,4 +1,4 @@
-%!TEX root = ReleaseNotes.tex
+\input{preamble_handout}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -6,12 +6,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % \titleframe
+\title{Vecto 3.0.1 Release Report}	% Kurztitel in []
 
 \maketitle
 
 %====================
 
 \input{Vecto_3.0.1.312/ReleaseNotes.tex}
+
+\input{Vecto_3.0.1.312/Comparison.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
