--- a/Documentation/ReleaseNotes/header.tex
+++ b/Documentation/ReleaseNotes/header.tex
@@ -1,12 +1,12 @@
-%!TEX root = lecture.presentation.tex
+%!TEX root = ReleaseNotes.tex
 
 %%%
 %%%  Common Settings
 %%%
 \institute{Institute for Technical Informatics, TU Graz}
-\title{ICT Computer Architectures}	% Kurztitel in []
+\title{Vecto 3.x Release Notes}	% Kurztitel in []
 \author{DI Dr. Markus Quaritsch}
-\date{WS 2015/16}		% \today für heutiges Datum verwenden
+\date{\today}		% \today für heutiges Datum verwenden
 
 \setcounter{tocdepth}{4}
 \usepackage{listings}
@@ -221,11 +221,6 @@
 \renewcommand{\arraystretch}{1.17}
 
 \graphicspath{ %
-	{../beamer_theme/} %
-	 {../Everything/img/} %
-	 {../0_Preparatory/img/} %
-	 {../1_Microprocessor_Fundamentals/img/} %
-	 {../2_Processor_Examples/img/} %
-	 {../3_System_Peripheral_Connect/img/} %
-	 {../4_Networking/img/} %
+	{beamer_theme/} %
+	 {img/} %
 }
