--- a/Documentation/ReleaseNotes/preamble_handout.tex
+++ b/Documentation/ReleaseNotes/preamble_handout.tex
@@ -23,11 +23,12 @@
 
 % \institute{Institute for Technical Informatics, TU Graz}
 \title{Vecto 3.x Release Notes}	% Kurztitel in []
-\author{DI Dr. Markus Quaritsch}
+\author{DI Dr. Markus Quaritsch, DI Dr. Christian Kreiner, Michael Krisper}
 \date{\today}		% \today für heutiges Datum verwenden
 
 \usepackage{pdfpages}
 \usepackage{pifont}
+\usepackage{placeins}
 
 \usepackage{array}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
